# shuup-product-reviews

./: .gitignore  .travis.yml  CHANGELOG.md  MANIFEST.in  README.md  README.rst  requirements-test.txt  reviews.drawio  setup.cfg  setup.py
.tx/: config
shuup_product_reviews/: __init__.py  apps.py  base.py  build_resources.js  dashboard_items.py  enums.py  models.py  notify_events.py  npm-shrinkwrap.json  package-lock.json  package.json  plugins.py  resources.py  settings.py  signal_handlers.py  urls.py  utils.py  views.py
shuup_product_reviews/admin_module/: __init__.py  base.py  dashboard.py  mass_actions.py  views.py
shuup_product_reviews/migrations/: 0001_initial.py
shuup_product_reviews/static_src/: index.js  reviews.js  scripts.js  starInput.js  styles.scss
shuup_product_reviews/templates/shuup_product_reviews/: macros.jinja  (+2 more)
shuup_product_reviews_tests/: factories.py  settings.py  test_admin.py  test_plugins.py  test_review_aggregation.py  test_utils.py  test_vendor_review_aggregation.py  test_vendor_reviews_view.py  test_views.py
shuup_vendor_reviews/: __init__.py  apps.py  build_resources.js  dashboard_items.py  models.py  notify_events.py  npm-shrinkwrap.json  package-lock.json  package.json  plugins.py  resources.py  settings.py  signal_handlers.py  urls.py  utils.py  views.py
shuup_vendor_reviews/admin_module/: __init__.py  dashboard.py  mass_actions.py  views.py
shuup_vendor_reviews/api/: __init__.py  serializers.py
shuup_vendor_reviews/migrations/: 0001_initial.py  0002_rating-opt.py
wheels/: shuup_multivendor-0.3.0-py2.py3-none-any.whl
(+20 files in other folders)
