[metadata]
name = shuup-product-reviews
version = 0.1.0
description = Shuup Product Reviews
long_description = file: README.rst
keywords = shuup, reviews

[options]
include_package_data = True
packages = find:
install_requires =
    setuptools-gitver>=1.1.0

[options.extras_require]
shuup = shuup>=1.7,<2

[options.entry_points]
shuup.addon = shuup_product_reviews = shuup_product_reviews

[bdist_wheel]
universal = 1

[tool:pytest]
DJANGO_SETTINGS_MODULE = shuup_product_reviews_tests.settings
django_find_project = false
norecursedirs = node_modules .git venv

[flake8]
exclude = .tox,migrations,doc/*,venv
max-line-length = 120
max-complexity = 12

[isort]
atomic=true
combine_as_imports=false
indent=4
known_first_party=shuup
known_standard_library=token,tokenize,enum,importlib
known_third_party=django,six
length_sort=false
line_length=79
multi_line_output=5
order_by_type=false
skip=migrations,venv
not_skip=__init__.py
wrap_length=79

[coverage:run]
omit = */migrations/*,venv
